fix(a11y): Improve keyboard navigation and screen reading of signup form
Because:

* The password requirements dialog was not announced by screen readers
* Show/hide password control was not available to keyboard-only users
* Tooltip errors were not read by screen readers
* Password strength bubble and password info bubble overlapped input fields in mobile view

This commit:

* Add screen reader only password input feedback (positive and negative) to supplement existing visual feedback
* Display password requirements inline in mobile view ro narrow viewports
* Add aria-live and aria-describedby arguments to ensure tooltips are read by screen readers

Closes #FXA-9004, FXA-9005, FXA-9006

--- a/packages/fxa-react/styles/tooltips.css
+++ b/packages/fxa-react/styles/tooltips.css
@@ -3,33 +3,18 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .input-balloon {
-  @apply absolute text-start w-[calc(100%+.5rem)] -left-1 desktop:w-64 desktop:left-auto px-5 py-4 bg-white rounded-sm top-[calc(100%+.25rem)] desktop:-top-2 border border-grey-100 shadow-sm transition-opacity z-10;
-
-  &::before {
-    @apply absolute w-3 h-3 rotate-45 bg-white border-grey-100 border-l border-t top-[calc(-0.375rem-1px)] content-[''];
-  }
+  @apply text-xs text-start mt-4 mb-2;
 }
 
 @screen desktop {
   .input-balloon {
     @apply before:top-5;
 
-    [dir='ltr'] & {
-      @apply left-[calc(100%+1rem)];
+    @apply start-[calc(100%+1rem)] absolute w-64 px-5 py-4 bg-white rounded-sm -top-4 border border-grey-100 shadow-sm transition-opacity z-10;
 
-      &::before {
-        /* negative left is half the pseudo width - border-width */
-        @apply border-l border-b border-t-0 left-[calc(-0.375rem-1px)];
-      }
-    }
-
-    [dir='rtl'] & {
-      @apply right-[calc(100%+1rem)];
-
-      &::before {
-        /* negative right is half the pseudo width - border-width */
-        @apply border-r border-l-0 right-[calc(-0.375rem-1px)];
-      }
+    &::before {
+      /* negative start is half the pseudo width - border-width */
+      @apply absolute w-3 h-3 rotate-45 bg-white border-grey-100 content-[''] border-l border-b border-t-0 start-[calc(-0.375rem-1px)];
     }
   }
 }
